unpackaged/main/default/objects/pse__Region__c/fields/Region_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Region_Owner_Name__c</fullName>
    <formula>pse__Region_Head__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region Owner Name</label>
    <type>Text</type>
</CustomField>