unpackaged/main/default/objects/pse__Region__c/fields/RegionOwnerBackup__c.field-meta.xml
<CustomField>
    <fullName>RegionOwnerBackup__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <formula>CASESAFEID(pse__Region_Head__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RegionOwnerBackup</label>
    <type>Text</type>
</CustomField>