unpackaged/main/default/objects/pse__Region__c/fields/Sales_Hold_Approver__c.field-meta.xml
<CustomField>
    <fullName>Sales_Hold_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Hold Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Hold_Approver_Regions</relationshipName>
    <type>Lookup</type>
</CustomField>