unpackaged/main/default/objects/pse__Region__c/fields/Theater__c.field-meta.xml
<CustomField>
    <fullName>Theater__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <label>Theater</label>
    <referenceTo>pse__Region__c</referenceTo>
    <relationshipLabel>Regions (Theater)</relationshipLabel>
    <relationshipName>Regions</relationshipName>
    <type>Lookup</type>
</CustomField>