unpackaged/main/default/objects/pse__Region__c/listViews/All_Regions.listView-meta.xml
<ListView>
    <fullName>All_Regions</fullName>
    <columns>NAME</columns>
    <columns>pse__Hierarchy_Depth__c</columns>
    <columns>pse__Region_Head__c</columns>
    <columns>pse__Parent_Region__c</columns>
    <columns>Sales_Hold_Approver__c</columns>
    <columns>pse__Headquarters_Region__c</columns>
    <columns>Theater__c</columns>
    <columns>pse__Include_In_Forecasting__c</columns>
    <columns>pse__Current_Time_Period__c</columns>
    <columns>pse__Reversed_ID_Chain__c</columns>
    <columns>pse__Action_Update_Current_Time_Period__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>PSA_Super_Admin_Mel_only</group>
    </sharedTo>
</ListView>