unpackaged/main/default/objects/pse__Region__c/listViews/APCJ_Regions.listView-meta.xml
<ListView>
    <fullName>APCJ_Regions</fullName>
    <columns>NAME</columns>
    <columns>pse__Parent_Region__c</columns>
    <columns>Theater__c</columns>
    <columns>pse__Region_Head__c</columns>
    <columns>pse__Default_Work_Calendar__c</columns>
    <columns>Sales_Hold_Approver__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Theater__c</field>
        <operation>equals</operation>
        <value>APCJ</value>
    </filters>
    <label>APCJ Regions</label>
    <sharedTo>
        <group>PSA_Super_Admin_Mel_only</group>
    </sharedTo>
</ListView>